force-app/main/default/objects/animalos__Charge__c/animalos__Charge__c.object-meta.xml
<CustomObject>
    <label>Charge</label>
    <nameField>
        <displayFormat>CH{00000}</displayFormat>
        <label>Charge ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>