force-app/main/default/objects/animalos__Charge__c/fields/animalos__CAN_Number__c.field-meta.xml
<CustomField>
    <fullName>animalos__CAN_Number__c</fullName>
    <label>CAN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>