force-app/main/default/objects/animalos__Charge__c/fields/animalos__Charge_Outcome__c.field-meta.xml
<CustomField>
    <fullName>animalos__Charge_Outcome__c</fullName>
    <label>Charge Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Substantive</fullName>
            </value>
            <value>
                <fullName>Additional Outcomes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>