force-app/main/default/objects/animalos__Charge__c/fields/animalos__Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cruelty</fullName>
            </value>
            <value>
                <fullName>Neglect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>