force-app/main/default/objects/animalos__Charge__c/fields/animalos__Date_Filed__c.field-meta.xml
<CustomField>
    <fullName>animalos__Date_Filed__c</fullName>
    <label>Date Filed</label>
    <type>Date</type>
</CustomField>