force-app/main/default/objects/animalos__Charge__c/fields/animalos__Legal_Code__c.field-meta.xml
<CustomField>
    <fullName>animalos__Legal_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Code</label>
    <referenceTo>animalos__Legal_Code__c</referenceTo>
    <relationshipLabel>Charges</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>